# swiftLimitSetting

./: README.md  Setup.sh  building.sh  make.sh  remake.sh
r21SwiftNew/SensitivityStudies/source/: CMakeLists.txt  README  setup.sh
r21SwiftNew/SensitivityStudies/source/configs/: searchphase.Gauss_width15.620.GeV.500p0.ifb.mjj_Gauss.4.par.102.seed.NLO2015_29p7_sensitivityScan.config  sensitivityScan.BStar.3.par.8585.fix.config  sensitivityScan.BStar.3.par.8585.flt.config  sensitivityScan.BStar.4.par.7777.fix.config  sensitivityScan.BStar.4.par.7777.flt.config  sensitivityScan.BStar.4.par.8585.fix.config  sensitivityScan.BStar.4.par.8585.flt.config  sensitivityScan.QStar.3.par.config  sensitivityScan.QStar.4.par.config  sensitivityScan.Test.config
r21SwiftNew/SensitivityStudies/source/data/: searchPhase.patch.20p0.ifb.mbb_fix_8585_smooth.3.par.0.seed.t00.root  searchPhase.patch.20p0.ifb.mjj_smooth.3.par.0.seed.t00.root  searchPhase.patch.20p0.ifb.mjj_smooth.4.par.0.seed.t00.root
r21SwiftNew/SensitivityStudies/source/scriptSubmissionForHanno/: doSensitivityScan.py  sensitivityScan.Gauss.4.par.width5.config  testLumi.py
r21SwiftNew/SensitivityStudies/source/scripts/: .asetup.save  Fluctuated_SwiftFittrijet_HLT_j380_inclusive.root  Fluctuated_SwiftFittrijet_HLT_j380_twoBtagged.root  Fluctuated_trijet_HLT_j380_inclusive.root  README.md  SteeringSwift.py  batchDoSensitivity.py  compareDiffWithUncertainties.py  doSensitivityScan.py  doSensitivityScan2_rewrite.py  doSensitivityScan_debug.py  doSensitivityScan_withLumiSteps.py  doSensitivityScan_withNLO.py  doTest.py  fileNamingTool.py  loopDrawSignalInjectionMassPoints.py  loopSearchPhase.py  loopStep1.py  myfile.txt  out  out.txt  plotLumiScanResults.py  plotSearchPhase.py  runThisThing.sh  sensitivityScan.Gauss.4.par.width5_fullRange_CD.config_log.txt  sensitivityTools.py  step01.getDataLikeQCD.py  step01_rewrite.py  step02.injectDataLikeSignal.py  step02_rewrite.py  step03.searchPhase.py  step03_rewrite.py  width10config.json  width15Configbackground2.json  width7config.json
source/Bayesian/: .CMakeLists.txt.swg  .CMakeLists.txt.swh  .CMakeLists.txt.swi  .CMakeLists.txt.swj  .CMakeLists.txt.swk  .CMakeLists.txt.swl  .CMakeLists.txt.swm  .CMakeLists.txt.swn  .CMakeLists.txt.swo  .CMakeLists.txt.swp  .Run_gjjSearchPhase.py.swm  .Run_gjjSearchPhase.py.swn  .Run_gjjSearchPhase.py.swo  .Run_gjjSearchPhase.py.swp  CMAKELISTSOLD.txt  CMakeLists.txt  CMakeListsOLDD.txt  Run_gjjLimits_Splits.py  Run_gjjLimits_Splits_Ori.py  Run_gjjSearchPhase.py  Setup.sh  calculateGaussianLimits_gjj.py  changeFiles  compileAndReturn.sh  diffSelectionSearchPhase.py  gitadd  gitrm  tempRun_gjjLimits_Splits.py
source/Bayesian/.svn/: entries
source/Bayesian/.svn/text-base/: README.svn-base  Run_gjjLimits_Splits.py.svn-base  Run_gjjSearchPhase.py.svn-base  Run_gjjSpurious.py.svn-base  Run_jjjSearchPhase.py.svn-base  Run_jjjSpurious.py.svn-base  calculateGaussianLimits_jjj.py.svn-base
source/Bayesian/Bayesian/: .MjjBATAnalysisFacility.h.swp  .MjjBATBumpHunter.h.swp  .MjjBATModel.h.swp  BonusFitFunctions.h  MjjBATAnalysisFacility.h  MjjBATBumpHunter.h  MjjBATComparisonTool.h  MjjBATModel.h  MjjBATProcess.h  MjjBATSystematic.h  MjjBATSystematicVariation.h  MjjBATTemplateSyst.h  MjjFitFunction.h  MjjFitFunctionBase.h  MjjFitter.h  MjjHistogram.h  MjjPseudoExperimenter.h
source/Bayesian/Bayesian/.svn/: entries
source/Bayesian/LSFJOB_70009320/: LSFJOB  STDOUT
source/Bayesian/LSFJOB_70009322/: LSFJOB  STDOUT
source/Bayesian/LSFJOB_70009324/: LSFJOB  STDOUT
source/Bayesian/Root/: .MjjBATModel.cxx.swp  MjjBATModel.cxx  MjjBATProcess.cxx  MjjBATScaleChangingSyst.cxx  MjjBATSystematic.cxx  MjjBATSystematicVariation.cxx  MjjBATTemplateSyst.cxx  MjjBumpHunter.cxx  MjjFitParameter.cxx  MjjFitter.cxx  MjjHistogram.cxx  MjjPseudoExperimenter.cxx
source/Bayesian/Root/.svn/: entries
source/Bayesian/cmt/: Makefile.RootCore
source/Bayesian/cmt/.svn/: entries
source/Bayesian/configurations/: Step1_SearchPhaseNoSyst_3Par.config  Step1_SearchPhaseNoSyst_gjj_4Par.config  Step1_Spurious_3Par.config  Step1_Spurious_gjj_4Par.config  Step3_LimitSettingPhase_ZPrimemR_gSM0p10.config  Step3_LimitSettingPhase_gjj_ZPrimemR_gSM0p20.config  Step3_LimitSettingPhase_gjj_ZPrimemR_gSM0p30.config  Step3_LimitSettingPhase_gjj_ZPrimemR_gSM0p40.config
source/Bayesian/configurations/configurations/: .Step2_setLimitsOneMassPoint_gjj_ZPrimemR2017.config.swp  .Step3_LimitSettingPhase_ZPrimemR_gSM0p10.config.swp  Step1_Spurious_gjj_4Par.config  Step2_setLimitsOneMassPoint_ZPrimemR.config  Step2_setLimitsOneMassPoint_gjj_ZPrimemR2017.config  Step3_LimitSettingPhase_ZPrimemR_Ph100_gSM0p1.config  Step3_LimitSettingPhase_ZPrimemR_Ph100_gSM0p3.config  Step3_LimitSettingPhase_ZPrimemR_Ph100_gSM0p4.config  Step3_LimitSettingPhase_ZPrimemR_gSM0p30.config  Step3_LimitSettingPhase_gjj_ZPrimemR_gSM0p10.config  Step4_GenericGaussians_gjj.config
source/Bayesian/doc/: BayesianNote.tex  Makefile  setup.sh
source/Bayesian/doc/.svn/: entries
source/Bayesian/inputs/NoTails/: ChopTails.py
source/Bayesian/plotting/.svn/: entries
source/Bayesian/plotting/LimitSettingPhase/: plotGaussians_gjj.py
source/Bayesian/scripts/: Step1_BatchScript_Template.sh  setup-StatisticalAnalysis.sh
source/Bayesian/util/: SearchPhase.cxx  doGaussianLimits.cxx  setLimitsOneMassPoint.cxx
(+3550 files in other folders)
